Revert "Added button functionality"
This reverts commit f1dbc5b1d125c5fa79f27cac6146197ffa3b627d.

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -22,10 +22,9 @@
         android:layout_alignParentLeft="true"
         android:layout_margin="5dp"
         android:text="Logout"
-        android:onClick="logout"
         />
     <Button
-        android:id="@+id/addTrails"
+        android:id="@+id/addtrail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -33,7 +32,6 @@
         android:layout_marginBottom="5dp"
         android:layout_marginRight="5dp"
         android:text="Add trail"
-        android:onClick="addTrails"
         />
     <Button
         android:id="@+id/search"
@@ -43,7 +41,6 @@
         android:layout_alignParentRight="true"
         android:layout_margin="5dp"
         android:text="Search"
-        android:onClick="search"
         />
     <ImageButton
         android:id="@+id/favorites"
@@ -56,7 +53,6 @@
         android:layout_marginBottom="50dp"
         android:src="@drawable/bookmark_24"
         android:text="Search"
-
         />
 
 
