--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -22,6 +22,7 @@
         android:layout_alignParentLeft="true"
         android:layout_margin="5dp"
         android:text="Logout"
+        android:onClick="logout"
         />
     <Button
         android:id="@+id/addtrail"
@@ -32,6 +33,7 @@
         android:layout_marginBottom="5dp"
         android:layout_marginRight="5dp"
         android:text="Add trail"
+        android:onClick="addtrail"
         />
     <Button
         android:id="@+id/search"
@@ -41,6 +43,7 @@
         android:layout_alignParentRight="true"
         android:layout_margin="5dp"
         android:text="Search"
+        android:onClick="search"
         />
     <ImageButton
         android:id="@+id/favorites"
