--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -78,8 +78,8 @@
         android:id="@+id/spinner3"
         android:layout_width="136dp"
         android:layout_height="28dp"
-        android:layout_marginStart="256dp"
-        android:layout_marginTop="228dp"
+        android:layout_marginStart="248dp"
+        android:layout_marginTop="236dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -87,8 +87,8 @@
         android:id="@+id/spinner4"
         android:layout_width="137dp"
         android:layout_height="34dp"
-        android:layout_marginStart="256dp"
-        android:layout_marginTop="284dp"
+        android:layout_marginStart="248dp"
+        android:layout_marginTop="292dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -106,6 +106,10 @@
         android:id="@+id/spinner5"
         android:layout_width="132dp"
         android:layout_height="35dp"
-        tools:layout_editor_absoluteX="262dp"
-        tools:layout_editor_absoluteY="350dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.888"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.488" />
 </androidx.constraintlayout.widget.ConstraintLayout>
